JWT access token generation

--- a/server/src/public/views/index.html
+++ b/server/src/public/views/index.html
@@ -43,7 +43,7 @@
       <h1 class="header">Register</h1>
       <input type="text" name="username" placeholder="Username" />
       <input type="password" name="password" placeholder="Password" />
-      <p id="error"></p>
+      <p id="errorRegister"></p>
       <button>Submit</button>
     </form>
 
@@ -51,7 +51,7 @@
       <h1 class="header">Login</h1>
       <input type="text" name="username" placeholder="Username" />
       <input type="password" name="password" placeholder="Password" />
-      <p id="error"></p>
+      <p id="errorLogin"></p>
       <button>Submit</button>
     </form>
   </div>
