homework model/routes/controller/repository

--- a/server/src/public/views/index.html
+++ b/server/src/public/views/index.html
@@ -29,7 +29,8 @@
     margin-bottom: 0;
   }
 
-  #error {
+  #errorRegister,
+  #errorLogin {
     color: red;
     margin-top: 0;
   }
@@ -44,7 +45,7 @@
       <input type="text" name="username" placeholder="Username" />
       <input type="password" name="password" placeholder="Password" />
       <p id="errorRegister"></p>
-      <button>Submit</button>
+      <button>Register</button>
     </form>
 
     <form id="authLogin">
@@ -52,7 +53,7 @@
       <input type="text" name="username" placeholder="Username" />
       <input type="password" name="password" placeholder="Password" />
       <p id="errorLogin"></p>
-      <button>Submit</button>
+      <button>Login</button>
     </form>
   </div>
 
